--- a/NoProblems/Properties/Localize.resx
+++ b/NoProblems/Properties/Localize.resx
@@ -134,6 +134,9 @@
   <data name="Mod_WhatsNewMessage2_2" xml:space="preserve">
     <value>[UPDATED] New settings UI style.</value>
   </data>
+  <data name="Mod_WhatsNewMessage2_3" xml:space="preserve">
+    <value>[UPDATED] Updated required game version to 1.18.1-f3</value>
+  </data>
   <data name="Settings_AirportGroup" xml:space="preserve">
     <value>Airport notifications</value>
   </data>
