--- a/NoProblems/Properties/Localize.resx
+++ b/NoProblems/Properties/Localize.resx
@@ -137,6 +137,9 @@
   <data name="Mod_WhatsNewMessage2_3" xml:space="preserve">
     <value>[UPDATED] Updated required game version to 1.18.1-f3</value>
   </data>
+  <data name="Mod_WhatsNewMessage2_4" xml:space="preserve">
+    <value>[UPDATED] Updated required game version to 1.19.2-f3</value>
+  </data>
   <data name="Settings_AirportGroup" xml:space="preserve">
     <value>Airport notifications</value>
   </data>
